--- a/index.html
+++ b/index.html
@@ -6,19 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto 2</title>
+    <!-- Para ejecutar CSS -->
     <link rel="stylesheet" href="./css/index.css">
+    <!-- Para ejecutar JS -->
     <script src="./js/index.js"></script>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- Icono de GitHub -->
     <link rel="shortcut icon" href="./assets/img/github.svg" type="image/x-icon">
-    
+    <!-- Link de formato de letra -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 </head>
 
 <body class="body">
     <header class="header">
         <nav class="header-nav">
+            <div class="header-nav__container">
 
+                <div class="header-nav__menu-icon">
+                    <i class="bi bi-list"></i>
+                </div>
+                <ul class="header-nav__menu_link_list">
+                    <li class="heaver-nav__menu_link_item">
+                        <a href="#hero1" class="header-nav_menu-link"></a>
+                    </li>
+                    <li class="heaver-nav__menu_link_item">
+                        <a href="#hero2" class="header-nav_menu-link"></a>
+                    </li>
+                    <li class="heaver-nav__menu_link_item">
+                        <a href="#hero3" class="header-nav_menu-link"></a>
+                    </li>
+                    <li class="heaver-nav__menu_link_item">
+                        <a href="#hero4" class="header-nav_menu-link"></a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
 
@@ -27,7 +55,8 @@
     </main>
 
     <footer class="footer">
-        <h6></h6>
+        <h5>Copyright &copy; 2022 <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank"
+            rel="noopener noreferrer" class="footer-name">Christian Reyes</a>. Todos los derechos reservados.</h5>
     </footer>
 </body>
 
