--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Reto 2</title>
     <!-- Para ejecutar CSS -->
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/index.css"/>
     <!-- Para ejecutar JS -->
     <script src="./js/index.js"></script>
     <!-- Icono de GitHub -->
-    <link rel="shortcut icon" href="./assets/img/github.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/github.svg" type="image/x-icon"/>
     <!-- Link de formato de letra -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
+        rel="stylesheet"/>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,22 +28,24 @@
     <header class="header">
         <nav class="header-nav">
             <div class="header-nav__container">
-
+                <a href="" class="header-nav__link-logo-container">
+                    <img src="./assets/img/LogoChristian.png" alt="LogoChristian" width="150px" height="70px"/>
+                </a>
                 <div class="header-nav__menu-icon">
-                    <i class="bi bi-list"></i>
+                    <i class="bi bi-card-list"></i>
                 </div>
-                <ul class="header-nav__menu_link_list">
-                    <li class="heaver-nav__menu_link_item">
-                        <a href="#hero1" class="header-nav_menu-link"></a>
+                <ul class="header-nav__menu-link-list">
+                    <li class="heaver-nav__menu-link-item">
+                        <a href="#hero1" class="header-nav_menu-link">Acerca de mi</a>
                     </li>
-                    <li class="heaver-nav__menu_link_item">
-                        <a href="#hero2" class="header-nav_menu-link"></a>
+                    <li class="heaver-nav__menu-link-item">
+                        <a href="#hero2" class="header-nav_menu-link">Aprende HTML,JS,CSS y React</a>
                     </li>
-                    <li class="heaver-nav__menu_link_item">
-                        <a href="#hero3" class="header-nav_menu-link"></a>
+                    <li class="heaver-nav__menu-link-item">
+                        <a href="#hero3" class="header-nav_menu-link">Conóceme</a>
                     </li>
-                    <li class="heaver-nav__menu_link_item">
-                        <a href="#hero4" class="header-nav_menu-link"></a>
+                    <li class="heaver-nav__menu-link-item">
+                        <a href="#hero4" class="header-nav_menu-link">Christian Reyes</a>
                     </li>
                 </ul>
             </div>
@@ -55,8 +57,37 @@
     </main>
 
     <footer class="footer">
-        <h5>Copyright &copy; 2022 <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank"
-            rel="noopener noreferrer" class="footer-name">Christian Reyes</a>. Todos los derechos reservados.</h5>
+        <nav class="footer__container">
+            <ul class="footer__link-socialnetwork-list">
+                <li class="footer__link-socialnetwork-item">
+                    <a href="" class="footer__link-socialwork-item">
+                        <img src="./assets/img/linkedin.svg" alt="Linkedin" class="footer__logo-social-item" width="25px" height="25px"/>
+                    </a>
+                </li>
+                <li class="footer__link-socialnetwork-item">
+                    <a href="" class="footer__link-socialwork-item">
+                        <img src="./assets/img/github.svg" alt="GitHub" class="footer__logo-social-item" width="25px" height="25px"/>
+                    </a>
+                </li>
+                <li class="footer__link-socialnetwork-item">
+                    <a href="" class="footer__link-socialwork-item">
+                        <img src="./assets/img/facebook.svg" alt="Facebook" class="footer__logo-social-item" width="25px" height="25px"/>
+                    </a>
+                </li>
+                <li class="footer__link-socialnetwork-item">
+                    <a href="" class="footer__link-socialwork-item">
+                        <img src="./assets/img/instagram.svg" alt="Instagram" class="footer__logo-social-item" width="25px" height="25px"/>
+                    </a>
+                </li>
+                <li class="footer__link-socialnetwork-item">
+                    <a href="" class="footer__link-socialwork-item">
+                        <img src="./assets/img/youtube.svg" alt="Youtube" class="footer__logo-social-item" width="25px" height="25px"/>
+                    </a>
+                </li>
+            </ul>
+            <h5>Copyright &copy; 2022 <a href="https://www.linkedin.com/in/crso/" target="_blank"
+                rel="noopener noreferrer" class="footer-name">Christian Reyes</a>. Todos los derechos reservados.</h5>
+        </nav>
     </footer>
 </body>
 
