--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <a href="" class="header-nav__link-logo-container">
                     <img src="./assets/img/LogoChristian.png" alt="LogoChristian" width="150px" height="70px"/>
                 </a>
-                <div class="header-nav__menu-icon">
+                <!-- <div class="header-nav__menu-icon">
                     <i class="bi bi-card-list"></i>
-                </div>
+                </div> -->
                 <ul class="header-nav__menu-link-list">
                     <li class="heaver-nav__menu-link-item">
                         <a href="#hero1" class="header-nav_menu-link">Acerca de mi</a>
@@ -42,7 +42,7 @@
                         <a href="#hero2" class="header-nav_menu-link">Aprende HTML,JS,CSS y React</a>
                     </li>
                     <li class="heaver-nav__menu-link-item">
-                        <a href="#hero3" class="header-nav_menu-link">Conóceme</a>
+                        <a href="#hero3" class="header-nav_menu-link">Proyectos</a>
                     </li>
                     <li class="heaver-nav__menu-link-item">
                         <a href="#hero4" class="header-nav_menu-link">Christian Reyes</a>
@@ -60,28 +60,29 @@
         <nav class="footer__container">
             <ul class="footer__link-socialnetwork-list">
                 <li class="footer__link-socialnetwork-item">
-                    <a href="" class="footer__link-socialwork-item">
-                        <img src="./assets/img/linkedin.svg" alt="Linkedin" class="footer__logo-social-item" width="25px" height="25px"/>
+                    <a href="https://www.linkedin.com/in/crso/" class="footer__link-socialwork-item" target="_blank" rel="noreferrer noopener">
+                        <img src="https://i.postimg.cc/J7BLFtdc/linkedin.png" alt="Linkedin" class="footer__logo-social-item" width="25px" height="25px"/>
                     </a>
                 </li>
-                <li class="footer__link-socialnetwork-item">
-                    <a href="" class="footer__link-socialwork-item">
-                        <img src="./assets/img/github.svg" alt="GitHub" class="footer__logo-social-item" width="25px" height="25px"/>
+                <li class="footer__link-socialnetwork-item" target="_blank" rel="noreferrer noopener">
+                    <a href="https://github.com/CJRS1" class="footer__link-socialwork-item">
+                        <img src="https://i.postimg.cc/5NBMxTJX/github.png" alt="GitHub" class="footer__logo-social-item" width="25px" height="25px"/>
                     </a>
                 </li>
-                <li class="footer__link-socialnetwork-item">
-                    <a href="" class="footer__link-socialwork-item">
-                        <img src="./assets/img/facebook.svg" alt="Facebook" class="footer__logo-social-item" width="25px" height="25px"/>
+                <li class="footer__link-socialnetwork-item" target="_blank" rel="noreferrer noopener">
+                    <a href="https://www.facebook.com/profile.php?id=100015773387284" class="footer__link-socialwork-item">
+                        <img src="https://i.postimg.cc/7YHyZXZX/facebook.png" alt="Facebook" class="footer__logo-social-item" width="25px" height="25px"/>
                     </a>
                 </li>
-                <li class="footer__link-socialnetwork-item">
-                    <a href="" class="footer__link-socialwork-item">
-                        <img src="./assets/img/instagram.svg" alt="Instagram" class="footer__logo-social-item" width="25px" height="25px"/>
+                <li class="footer__link-socialnetwork-item" target="_blank" rel="noreferrer noopener">
+                    <a href="https://www.instagram.com/ctn_rs/" class="footer__link-socialwork-item">
+                        <img src="https://i.postimg.cc/sfJtqS4W/instagram.png" alt="Instagram" class="footer__logo-social-item" width="25px" height="25px"/>
                     </a>
                 </li>
-                <li class="footer__link-socialnetwork-item">
-                    <a href="" class="footer__link-socialwork-item">
-                        <img src="./assets/img/youtube.svg" alt="Youtube" class="footer__logo-social-item" width="25px" height="25px"/>
+                <li class="footer__link-socialnetwork-item" target="_blank" rel="noreferrer noopener">
+                    <a href="https://www.youtube.com/channel/UC9a4LHl_vzZ5Eh3pkh7DrNA" class="footer__link-socialwork-item">
+                        <img src="https://i.postimg.cc/dtPYcvbM/youtube.png" alt="Youtube" class="footer__logo-social-item" width="25px" height="25px"/>
+                        <!-- <span class="footer__logo-social-item"><i class="bi bi-linkedin" class="footer__link-socialwork-item"></i></span> -->
                     </a>
                 </li>
             </ul>
