Update header y footer

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <header class="header">
         <nav class="header-nav">
             <div class="header-nav__container">
-                <a href="" class="header-nav__link-logo-container">
-                    <img src="./assets/img/LogoChristian.png" alt="LogoChristian" width="150px" height="70px"/>
+                <a href="#" class="header-nav__link-logo-container">
+                    <img src="./assets/img/LogoChristian.png" alt="LogoChristian" class="header-nav__link-logo" width="150px" height="70px"/>
                 </a>
                 <!-- <div class="header-nav__menu-icon">
                     <i class="bi bi-card-list"></i>
@@ -60,33 +60,33 @@
         <nav class="footer__container">
             <ul class="footer__link-socialnetwork-list">
                 <li class="footer__link-socialnetwork-item">
-                    <a href="https://www.linkedin.com/in/crso/" class="footer__link-socialwork-item" target="_blank" rel="noreferrer noopener">
-                        <img src="https://i.postimg.cc/J7BLFtdc/linkedin.png" alt="Linkedin" class="footer__logo-social-item" width="25px" height="25px"/>
+                    <a href="https://www.linkedin.com/in/crso/" class="footer__link-socialnetwork" target="_blank" rel="noreferrer noopener">
+                        <img src="https://i.postimg.cc/J7BLFtdc/linkedin.png" alt="Linkedin" class="footer__logo-social-item" width="30px" height="30px"/>
                     </a>
                 </li>
-                <li class="footer__link-socialnetwork-item" target="_blank" rel="noreferrer noopener">
-                    <a href="https://github.com/CJRS1" class="footer__link-socialwork-item">
-                        <img src="https://i.postimg.cc/5NBMxTJX/github.png" alt="GitHub" class="footer__logo-social-item" width="25px" height="25px"/>
+                <li class="footer__link-socialnetwork-item">
+                    <a href="https://github.com/CJRS1" class="footer__link-socialnetwork" target="_blank" rel="noopener noreferrer">
+                        <img src="https://i.postimg.cc/5NBMxTJX/github.png" alt="GitHub" class="footer__logo-social-item" width="30px" height="30px"/>
                     </a>
                 </li>
-                <li class="footer__link-socialnetwork-item" target="_blank" rel="noreferrer noopener">
-                    <a href="https://www.facebook.com/profile.php?id=100015773387284" class="footer__link-socialwork-item">
-                        <img src="https://i.postimg.cc/7YHyZXZX/facebook.png" alt="Facebook" class="footer__logo-social-item" width="25px" height="25px"/>
+                <li class="footer__link-socialnetwork-item">
+                    <a href="https://www.facebook.com/profile.php?id=100015773387284" class="footer__link-socialnetwork" target="_blank" rel="noopener noreferrer">
+                        <img src="https://i.postimg.cc/7YHyZXZX/facebook.png" alt="Facebook" class="footer__logo-social-item" width="30px" height="30px"/>
                     </a>
                 </li>
-                <li class="footer__link-socialnetwork-item" target="_blank" rel="noreferrer noopener">
-                    <a href="https://www.instagram.com/ctn_rs/" class="footer__link-socialwork-item">
-                        <img src="https://i.postimg.cc/sfJtqS4W/instagram.png" alt="Instagram" class="footer__logo-social-item" width="25px" height="25px"/>
+                <li class="footer__link-socialnetwork-item">
+                    <a href="https://www.instagram.com/ctn_rs/" target="_blank" rel="noopener noreferrer">
+                        <img src="https://i.postimg.cc/sfJtqS4W/instagram.png" alt="Instagram" class="footer__logo-social-item" width="30px" height="30px"/>
                     </a>
                 </li>
-                <li class="footer__link-socialnetwork-item" target="_blank" rel="noreferrer noopener">
-                    <a href="https://www.youtube.com/channel/UC9a4LHl_vzZ5Eh3pkh7DrNA" class="footer__link-socialwork-item">
-                        <img src="https://i.postimg.cc/dtPYcvbM/youtube.png" alt="Youtube" class="footer__logo-social-item" width="25px" height="25px"/>
+                <li class="footer__link-socialnetwork-item">
+                    <a href="https://www.youtube.com/channel/UC9a4LHl_vzZ5Eh3pkh7DrNA" class="footer__link-socialnetwork" target="_blank" rel="noopener noreferrer">
+                        <img src="https://i.postimg.cc/dtPYcvbM/youtube.png" alt="Youtube" class="footer__logo-social-item" width="30px" height="30px"/>
                         <!-- <span class="footer__logo-social-item"><i class="bi bi-linkedin" class="footer__link-socialwork-item"></i></span> -->
                     </a>
                 </li>
             </ul>
-            <h5>Copyright &copy; 2022 <a href="https://www.linkedin.com/in/crso/" target="_blank"
+            <h5 class="footer__link-copyright">Copyright &copy; 2022 <a href="https://www.linkedin.com/in/crso/" target="_blank"
                 rel="noopener noreferrer" class="footer-name">Christian Reyes</a>. Todos los derechos reservados.</h5>
         </nav>
     </footer>
