--- a/index.html
+++ b/index.html
@@ -65,10 +65,13 @@
                     <h2 class="hero__info-subtitle">Desarrollador Web</h2>
                     <p class="hero__info-paragraph">
                         Hola soy Christian Reyes, soy ingeniero mecatrónico, tengo 26 años y tengo 5 años de experiencia
-                        realizando desarrollo web. Y dos años dictadno clases de desarrollo web desde cero.
+                        realizando desarrollo web. Y dos años dictadno clases de desarrollo web desde cero. 
+
+                        En este lugar podrás llevar el curso gratis en mi canal de Youtube (sin certificado) y si lo quieres concertificado
+                        puedes llevar invirtiendo tu dinero conmigo.
                     </p>
-                    <a href="https://www.linkedin.com/in/crso/" target="_blank" rel="noopener noreferrer"
-                        class="hero__info-link">¡Aprende gratis!</a>
+                    <a href="https://www.youtube.com/channel/UC9a4LHl_vzZ5Eh3pkh7DrNA" target="_blank" rel="noopener noreferrer"
+                        class="hero__info-link">¡Aprende gratis desde Youtube!</a>
                 </section>
                 <div class="hero__img-container">
                     <img src="./assets/img/foto.JPG" alt="Christian Reyes" width="256" height="256"
