Update final final

--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
                         Tema 1: ¿Qué es HTML?.
                     </p>
                     <p class="hero1__info-paragraph">
-                        Tema 2: Estructura de un documento en HTML.
+                        Tema 2: Fundamentos de HTML.
                     </p>
                     <p class="hero1__info-paragraph">
-                        Tema 3: Formato básico de documento.
+                        Tema 3: Etiquetas multimedia.
                     </p>
                     <p class="hero1__info-paragraph">
-                        Tema 4: Formato avanzado del documento.
+                        Tema 4: Formularios.
                     </p>
                     <p class="hero1__info-paragraph">
-                        Tema 5: Publicar la página en la Web.
+                        Tema 5: GitHub.
                     </p>
                     <p class="hero1__info-paragraph1">
                         Precio: 150 soles
